--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut omnis doloremque possimus temporibus animi officiis sint facilis quaerat error obcaecati aliquam modi aliquid, magni ducimus accusamus dolore voluptatum nisi placeat?
     </p>
+    <button>
+        Buy
+    </button>
 </body>
 </html>
